[package]
name = "simulated_annealing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fitting"
path = "src/fitting.rs"

[[bin]]
name = "run_grid"
path = "src/run_grid.rs"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
plotly = { version = "0.8.4", features = ["kaleido"] }
